[package]
edition = "2018"
name = "stormlib-node"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]
name = "stormlib_node"

[dependencies]
napi = "2.15.0"
napi-derive = "2.15.0"
libc = "0.2"
anyhow = "1.0"

[build-dependencies]
napi-build = "2.1.0"
bindgen = "0.69.2"
cmake = "0.1"

[profile.release]
lto = true
